add failed xid= tiles blind

--- a/dmu22/dmu22_EGS/XID+BLIND_EGS_final_processing.ipynb
+++ b/dmu22/dmu22_EGS/XID+BLIND_EGS_final_processing.ipynb
@@ -63,38 +63,38 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4560296704\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4518025592\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>HELP_ID</th><th>RA</th><th>Dec</th><th>F_SPIRE_250</th><th>FErr_SPIRE_250_u</th><th>FErr_SPIRE_250_l</th><th>F_SPIRE_350</th><th>FErr_SPIRE_350_u</th><th>FErr_SPIRE_350_l</th><th>F_SPIRE_500</th><th>FErr_SPIRE_500_u</th><th>FErr_SPIRE_500_l</th><th>Bkg_SPIRE_250</th><th>Bkg_SPIRE_350</th><th>Bkg_SPIRE_500</th><th>Sig_conf_SPIRE_250</th><th>Sig_conf_SPIRE_350</th><th>Sig_conf_SPIRE_500</th><th>Rhat_SPIRE_250</th><th>Rhat_SPIRE_350</th><th>Rhat_SPIRE_500</th><th>n_eff_SPIRE_250</th><th>n_eff_SPIRE_500</th><th>n_eff_SPIRE_350</th><th>Pval_res_250</th><th>Pval_res_350</th><th>Pval_res_500</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>43</td><td>214.079129644</td><td>51.5961235402</td><td>88.7914</td><td>90.032</td><td>87.3646</td><td>33.1627</td><td>34.4824</td><td>31.7585</td><td>5.83922</td><td>7.76892</td><td>3.94855</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>1.00022</td><td>0.999006</td><td>1.00012</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.901</td><td>0.871</td><td>0.016</td></tr>\n",
-       "<tr><td>106</td><td>213.927744567</td><td>51.2622574357</td><td>78.9218</td><td>81.2915</td><td>76.6269</td><td>54.544</td><td>57.0391</td><td>51.9742</td><td>25.1438</td><td>27.8614</td><td>22.2033</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>1.00204</td><td>0.998427</td><td>0.998474</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.029</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>121</td><td>214.075828786</td><td>51.6047066914</td><td>60.1303</td><td>61.4503</td><td>58.8198</td><td>25.2464</td><td>26.4972</td><td>23.9156</td><td>6.86548</td><td>8.5658</td><td>5.16375</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>1.00053</td><td>0.998226</td><td>0.998627</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.009</td><td>0.621</td><td>0.095</td></tr>\n",
-       "<tr><td>136</td><td>213.9829316</td><td>51.3765600161</td><td>69.6254</td><td>71.4587</td><td>67.7509</td><td>65.045</td><td>66.8499</td><td>63.1063</td><td>44.7233</td><td>46.9854</td><td>42.4425</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>1.00047</td><td>0.999511</td><td>0.999373</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.004</td><td>0.0</td></tr>\n",
-       "<tr><td>185</td><td>214.102782559</td><td>51.5751963654</td><td>62.1501</td><td>63.5331</td><td>60.7292</td><td>48.285</td><td>49.7205</td><td>46.8904</td><td>22.5911</td><td>24.2627</td><td>20.9809</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>0.99893</td><td>0.998625</td><td>0.998584</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.208</td><td>0.111</td><td>0.0</td></tr>\n",
-       "<tr><td>371</td><td>213.966187249</td><td>51.3095093807</td><td>40.0647</td><td>42.4211</td><td>37.8344</td><td>14.6106</td><td>17.088</td><td>12.1427</td><td>12.9195</td><td>17.1504</td><td>8.62944</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>0.999277</td><td>1.00025</td><td>1.00086</td><td>2000.0</td><td>772.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>504</td><td>214.103487662</td><td>51.4694106151</td><td>46.7412</td><td>48.5093</td><td>44.9342</td><td>43.4312</td><td>45.2435</td><td>41.7225</td><td>25.1842</td><td>27.3251</td><td>23.0219</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>1.00025</td><td>0.998246</td><td>0.999852</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.005</td><td>0.004</td><td>0.0</td></tr>\n",
-       "<tr><td>574</td><td>213.952555293</td><td>51.4804198426</td><td>39.8593</td><td>41.4229</td><td>38.3034</td><td>15.7379</td><td>17.1924</td><td>14.2196</td><td>1.90427</td><td>3.4761</td><td>0.660791</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>0.999613</td><td>0.99895</td><td>1.00023</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.015</td><td>0.029</td><td>0.001</td></tr>\n",
-       "<tr><td>577</td><td>214.052627976</td><td>51.3621319484</td><td>32.2197</td><td>34.3851</td><td>29.9907</td><td>8.08677</td><td>10.4734</td><td>5.74899</td><td>0.939762</td><td>2.19349</td><td>0.253569</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>0.999053</td><td>1.00126</td><td>0.999536</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.071</td><td>0.0</td></tr>\n",
-       "<tr><td>613</td><td>213.873463</td><td>51.3411634784</td><td>30.2567</td><td>32.013</td><td>28.4992</td><td>9.77727</td><td>11.4962</td><td>8.03679</td><td>1.13237</td><td>2.36251</td><td>0.346315</td><td>-0.16522</td><td>-0.222919</td><td>-0.173397</td><td>0.00370634</td><td>0.00533165</td><td>0.00712557</td><td>0.999834</td><td>0.998166</td><td>1.00014</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.004</td><td>0.0</td></tr>\n",
+       "<tr><td>43</td><td>214.07912964383556</td><td>51.59612354015088</td><td>88.791435</td><td>90.03198</td><td>87.36463</td><td>33.162735</td><td>34.482357</td><td>31.75847</td><td>5.8392153</td><td>7.768917</td><td>3.9485471</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>1.0002216</td><td>0.99900615</td><td>1.0001154</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.901</td><td>0.871</td><td>0.016</td></tr>\n",
+       "<tr><td>106</td><td>213.92774456738178</td><td>51.262257435683416</td><td>78.92177</td><td>81.29145</td><td>76.62691</td><td>54.544025</td><td>57.039055</td><td>51.974224</td><td>25.143751</td><td>27.861378</td><td>22.203253</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>1.002044</td><td>0.9984268</td><td>0.99847406</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.029</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>121</td><td>214.07582878612325</td><td>51.60470669138264</td><td>60.130295</td><td>61.45031</td><td>58.81982</td><td>25.246359</td><td>26.497229</td><td>23.915623</td><td>6.865479</td><td>8.565803</td><td>5.1637454</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>1.0005301</td><td>0.9982263</td><td>0.9986275</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.009</td><td>0.621</td><td>0.095</td></tr>\n",
+       "<tr><td>136</td><td>213.98293159998425</td><td>51.37656001607475</td><td>69.62544</td><td>71.458664</td><td>67.75094</td><td>65.04498</td><td>66.849945</td><td>63.106308</td><td>44.72334</td><td>46.985374</td><td>42.4425</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>1.0004747</td><td>0.9995111</td><td>0.9993734</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.004</td><td>0.0</td></tr>\n",
+       "<tr><td>185</td><td>214.10278255942006</td><td>51.5751963654372</td><td>62.150112</td><td>63.533077</td><td>60.7292</td><td>48.28504</td><td>49.720467</td><td>46.89035</td><td>22.591106</td><td>24.26268</td><td>20.980946</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>0.99893034</td><td>0.9986249</td><td>0.99858385</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.208</td><td>0.111</td><td>0.0</td></tr>\n",
+       "<tr><td>371</td><td>213.96618724944787</td><td>51.30950938066573</td><td>40.064686</td><td>42.421135</td><td>37.834393</td><td>14.610609</td><td>17.087997</td><td>12.142665</td><td>12.919537</td><td>17.150444</td><td>8.629437</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>0.9992768</td><td>1.0002468</td><td>1.0008574</td><td>2000.0</td><td>772.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>504</td><td>214.10348766155306</td><td>51.46941061509884</td><td>46.74123</td><td>48.50933</td><td>44.93424</td><td>43.431194</td><td>45.24353</td><td>41.722458</td><td>25.184244</td><td>27.325142</td><td>23.021866</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>1.0002522</td><td>0.99824554</td><td>0.9998521</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.005</td><td>0.004</td><td>0.0</td></tr>\n",
+       "<tr><td>574</td><td>213.95255529272626</td><td>51.480419842633154</td><td>39.859318</td><td>41.422863</td><td>38.303402</td><td>15.737937</td><td>17.192427</td><td>14.21961</td><td>1.9042679</td><td>3.4760995</td><td>0.6607906</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>0.99961257</td><td>0.9989497</td><td>1.0002283</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.015</td><td>0.029</td><td>0.001</td></tr>\n",
+       "<tr><td>577</td><td>214.05262797620483</td><td>51.36213194836945</td><td>32.219704</td><td>34.38508</td><td>29.990696</td><td>8.086773</td><td>10.473448</td><td>5.748993</td><td>0.93976206</td><td>2.193487</td><td>0.2535693</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>0.99905264</td><td>1.0012585</td><td>0.9995355</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.071</td><td>0.0</td></tr>\n",
+       "<tr><td>613</td><td>213.87346300010915</td><td>51.34116347839875</td><td>30.256723</td><td>32.012985</td><td>28.499193</td><td>9.777271</td><td>11.496249</td><td>8.03679</td><td>1.1323739</td><td>2.3625124</td><td>0.34631503</td><td>-0.16521987</td><td>-0.2229195</td><td>-0.17339727</td><td>0.0037063432</td><td>0.0053316527</td><td>0.007125567</td><td>0.9998335</td><td>0.99816555</td><td>1.0001352</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.004</td><td>0.0</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=10>\n",
-       "          HELP_ID                 RA      ... Pval_res_350 Pval_res_500\n",
-       "                                 deg      ...                          \n",
-       "          bytes27              float64    ...   float32      float32   \n",
-       "--------------------------- ------------- ... ------------ ------------\n",
-       "43                          214.079129644 ...        0.871        0.016\n",
-       "106                         213.927744567 ...          0.0          0.0\n",
-       "121                         214.075828786 ...        0.621        0.095\n",
-       "136                           213.9829316 ...        0.004          0.0\n",
-       "185                         214.102782559 ...        0.111          0.0\n",
-       "371                         213.966187249 ...          0.0          0.0\n",
-       "504                         214.103487662 ...        0.004          0.0\n",
-       "574                         213.952555293 ...        0.029        0.001\n",
-       "577                         214.052627976 ...        0.071          0.0\n",
-       "613                            213.873463 ...        0.004          0.0"
+       "          HELP_ID                   RA         ... Pval_res_350 Pval_res_500\n",
+       "                                   deg         ...                          \n",
+       "          bytes27                float64       ...   float32      float32   \n",
+       "--------------------------- ------------------ ... ------------ ------------\n",
+       "43                          214.07912964383556 ...        0.871        0.016\n",
+       "106                         213.92774456738178 ...          0.0          0.0\n",
+       "121                         214.07582878612325 ...        0.621        0.095\n",
+       "136                         213.98293159998425 ...        0.004          0.0\n",
+       "185                         214.10278255942006 ...        0.111          0.0\n",
+       "371                         213.96618724944787 ...          0.0          0.0\n",
+       "504                         214.10348766155306 ...        0.004          0.0\n",
+       "574                         213.95255529272626 ...        0.029        0.001\n",
+       "577                         214.05262797620483 ...        0.071          0.0\n",
+       "613                         213.87346300010915 ...        0.004          0.0"
       ]
      },
      "execution_count": 3,
@@ -122,6 +122,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -161,6 +163,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -200,6 +204,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -303,10 +309,21 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# galaxies =  9551\n",
+      "# galaxies =  9551\n"
+     ]
+    }
+   ],
    "source": [
     "# Reads MF table, removes duplicate RA and DEC\n",
     "cat2=Table.read('./data/EGS_SPIRE_all.fits')\n",
+    "print('# galaxies = ',np.size(cat2['RA']))\n",
+    "print('# galaxies = ',np.size(cat['RA']))\n",
     "del cat2['RA']\n",
     "del cat2['Dec']\n",
     "cat_all = hstack([cat,cat2])"
