--- a/dmu22/dmu22_ELAIS-N2/XID+BLIND_ELAIS-N2_final_processing.ipynb
+++ b/dmu22/dmu22_ELAIS-N2/XID+BLIND_ELAIS-N2_final_processing.ipynb
@@ -63,38 +63,38 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4351000928\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4548985408\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>HELP_ID</th><th>RA</th><th>Dec</th><th>F_SPIRE_250</th><th>FErr_SPIRE_250_u</th><th>FErr_SPIRE_250_l</th><th>F_SPIRE_350</th><th>FErr_SPIRE_350_u</th><th>FErr_SPIRE_350_l</th><th>F_SPIRE_500</th><th>FErr_SPIRE_500_u</th><th>FErr_SPIRE_500_l</th><th>Bkg_SPIRE_250</th><th>Bkg_SPIRE_350</th><th>Bkg_SPIRE_500</th><th>Sig_conf_SPIRE_250</th><th>Sig_conf_SPIRE_350</th><th>Sig_conf_SPIRE_500</th><th>Rhat_SPIRE_250</th><th>Rhat_SPIRE_350</th><th>Rhat_SPIRE_500</th><th>n_eff_SPIRE_250</th><th>n_eff_SPIRE_500</th><th>n_eff_SPIRE_350</th><th>Pval_res_250</th><th>Pval_res_350</th><th>Pval_res_500</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>11</td><td>248.130008791</td><td>39.283815213</td><td>135.117</td><td>138.374</td><td>132.041</td><td>241.44</td><td>247.038</td><td>235.964</td><td>14.7763</td><td>16.2016</td><td>13.3243</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>0.998358</td><td>0.998455</td><td>0.999</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>0.504</td><td>1.0</td></tr>\n",
-       "<tr><td>1177</td><td>248.253049989</td><td>39.3850607431</td><td>45.1317</td><td>48.0557</td><td>41.9943</td><td>31.7472</td><td>34.6817</td><td>28.9259</td><td>20.4694</td><td>23.8022</td><td>17.3988</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>1.00114</td><td>1.00165</td><td>0.999162</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>1240</td><td>248.145562442</td><td>39.3444551403</td><td>39.7527</td><td>43.4178</td><td>36.1364</td><td>24.1931</td><td>27.651</td><td>20.6868</td><td>2.61656</td><td>5.58045</td><td>0.760126</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>0.998902</td><td>0.998227</td><td>0.998218</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>1428</td><td>248.18724366</td><td>39.3179031419</td><td>38.22</td><td>42.3062</td><td>33.7944</td><td>18.967</td><td>23.7755</td><td>13.934</td><td>18.3636</td><td>23.9252</td><td>12.8397</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>0.998585</td><td>0.998389</td><td>0.998884</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>1882</td><td>248.095629601</td><td>39.3245683336</td><td>36.7443</td><td>40.0805</td><td>33.2328</td><td>19.4309</td><td>22.8395</td><td>15.8984</td><td>7.37512</td><td>11.267</td><td>3.66021</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>1.00088</td><td>0.999222</td><td>1.00076</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>3278</td><td>248.325032551</td><td>39.2909836586</td><td>27.096</td><td>32.0273</td><td>21.8195</td><td>5.77691</td><td>8.00145</td><td>3.68109</td><td>1.7111</td><td>3.30065</td><td>0.532118</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>0.99839</td><td>1.00102</td><td>1.00202</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.945</td><td>0.0</td></tr>\n",
-       "<tr><td>3404</td><td>248.218811079</td><td>39.343426426</td><td>38.6599</td><td>42.7783</td><td>34.4272</td><td>25.7711</td><td>30.0455</td><td>21.1028</td><td>0.509379</td><td>1.21096</td><td>0.144463</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>1.00032</td><td>0.99964</td><td>1.00039</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>3442</td><td>248.231672233</td><td>39.3979303998</td><td>25.0903</td><td>28.1672</td><td>21.9069</td><td>17.9099</td><td>21.1542</td><td>14.6196</td><td>21.0205</td><td>24.9966</td><td>16.6202</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>0.998804</td><td>0.99869</td><td>0.998907</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>3860</td><td>248.335430781</td><td>39.2913383164</td><td>24.8102</td><td>29.799</td><td>19.863</td><td>8.26266</td><td>10.3477</td><td>6.17309</td><td>33.5273</td><td>38.2562</td><td>28.7884</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>0.999412</td><td>0.998665</td><td>1.00031</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.855</td><td>0.0</td></tr>\n",
-       "<tr><td>3920</td><td>248.133551262</td><td>39.3321352991</td><td>20.6352</td><td>24.435</td><td>16.7635</td><td>21.8352</td><td>25.2403</td><td>18.5445</td><td>1.32843</td><td>3.17299</td><td>0.345271</td><td>-0.0422732</td><td>-0.0706374</td><td>-0.0638786</td><td>0.00418016</td><td>0.00560042</td><td>0.00827267</td><td>0.999795</td><td>0.998651</td><td>0.998872</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>11</td><td>248.1300087910033</td><td>39.28381521299216</td><td>135.1172</td><td>138.37357</td><td>132.04105</td><td>241.43953</td><td>247.0385</td><td>235.96411</td><td>14.776271</td><td>16.201551</td><td>13.324307</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>0.9983577</td><td>0.9984549</td><td>0.9990002</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>0.504</td><td>1.0</td></tr>\n",
+       "<tr><td>1177</td><td>248.25304998851303</td><td>39.38506074310171</td><td>45.13168</td><td>48.055695</td><td>41.99426</td><td>31.747225</td><td>34.681698</td><td>28.925915</td><td>20.46945</td><td>23.802206</td><td>17.398764</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>1.001136</td><td>1.0016457</td><td>0.9991617</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>1240</td><td>248.14556244175256</td><td>39.3444551402551</td><td>39.752747</td><td>43.417805</td><td>36.136375</td><td>24.193138</td><td>27.651049</td><td>20.686766</td><td>2.6165555</td><td>5.5804467</td><td>0.76012623</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>0.9989017</td><td>0.9982267</td><td>0.9982176</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>1428</td><td>248.18724366047473</td><td>39.31790314186429</td><td>38.220043</td><td>42.306248</td><td>33.794426</td><td>18.966982</td><td>23.775515</td><td>13.934008</td><td>18.363619</td><td>23.925161</td><td>12.839725</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>0.9985851</td><td>0.99838936</td><td>0.99888426</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>1882</td><td>248.09562960136293</td><td>39.32456833363475</td><td>36.744347</td><td>40.080452</td><td>33.232845</td><td>19.4309</td><td>22.839464</td><td>15.89841</td><td>7.3751225</td><td>11.266989</td><td>3.6602077</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>1.0008835</td><td>0.99922174</td><td>1.0007613</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>3278</td><td>248.32503255145218</td><td>39.29098365863322</td><td>27.09598</td><td>32.027275</td><td>21.819494</td><td>5.776911</td><td>8.001454</td><td>3.681089</td><td>1.7110959</td><td>3.3006494</td><td>0.5321178</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>0.9983905</td><td>1.00102</td><td>1.0020155</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.945</td><td>0.0</td></tr>\n",
+       "<tr><td>3404</td><td>248.21881107876348</td><td>39.343426426010986</td><td>38.65989</td><td>42.778275</td><td>34.42715</td><td>25.771143</td><td>30.0455</td><td>21.102774</td><td>0.5093786</td><td>1.2109596</td><td>0.14446291</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>1.0003226</td><td>0.99964046</td><td>1.0003933</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>3442</td><td>248.23167223339607</td><td>39.39793039979966</td><td>25.090284</td><td>28.167233</td><td>21.906925</td><td>17.909903</td><td>21.15415</td><td>14.619595</td><td>21.020464</td><td>24.996624</td><td>16.620249</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>0.9988038</td><td>0.9986902</td><td>0.9989067</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>3860</td><td>248.33543078136202</td><td>39.291338316436686</td><td>24.810179</td><td>29.798965</td><td>19.862997</td><td>8.262665</td><td>10.347732</td><td>6.173093</td><td>33.527313</td><td>38.256157</td><td>28.788406</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>0.99941206</td><td>0.99866503</td><td>1.0003128</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.855</td><td>0.0</td></tr>\n",
+       "<tr><td>3920</td><td>248.1335512620238</td><td>39.33213529914737</td><td>20.635244</td><td>24.43498</td><td>16.76355</td><td>21.83517</td><td>25.240269</td><td>18.54453</td><td>1.32843</td><td>3.1729927</td><td>0.34527078</td><td>-0.042273175</td><td>-0.07063735</td><td>-0.063878626</td><td>0.0041801627</td><td>0.005600419</td><td>0.008272672</td><td>0.99979544</td><td>0.9986509</td><td>0.9988719</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=10>\n",
-       "          HELP_ID                 RA      ... Pval_res_350 Pval_res_500\n",
-       "                                 deg      ...                          \n",
-       "          bytes27              float64    ...   float32      float32   \n",
-       "--------------------------- ------------- ... ------------ ------------\n",
-       "11                          248.130008791 ...        0.504          1.0\n",
-       "1177                        248.253049989 ...          0.0          0.0\n",
-       "1240                        248.145562442 ...          0.0          0.0\n",
-       "1428                         248.18724366 ...          0.0          0.0\n",
-       "1882                        248.095629601 ...          0.0          0.0\n",
-       "3278                        248.325032551 ...        0.945          0.0\n",
-       "3404                        248.218811079 ...          0.0          0.0\n",
-       "3442                        248.231672233 ...          0.0          0.0\n",
-       "3860                        248.335430781 ...        0.855          0.0\n",
-       "3920                        248.133551262 ...          0.0          0.0"
+       "          HELP_ID                   RA         ... Pval_res_350 Pval_res_500\n",
+       "                                   deg         ...                          \n",
+       "          bytes27                float64       ...   float32      float32   \n",
+       "--------------------------- ------------------ ... ------------ ------------\n",
+       "11                           248.1300087910033 ...        0.504          1.0\n",
+       "1177                        248.25304998851303 ...          0.0          0.0\n",
+       "1240                        248.14556244175256 ...          0.0          0.0\n",
+       "1428                        248.18724366047473 ...          0.0          0.0\n",
+       "1882                        248.09562960136293 ...          0.0          0.0\n",
+       "3278                        248.32503255145218 ...        0.945          0.0\n",
+       "3404                        248.21881107876348 ...          0.0          0.0\n",
+       "3442                        248.23167223339607 ...          0.0          0.0\n",
+       "3860                        248.33543078136202 ...        0.855          0.0\n",
+       "3920                         248.1335512620238 ...          0.0          0.0"
       ]
      },
      "execution_count": 3,
@@ -122,6 +122,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -161,6 +163,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -200,6 +204,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -303,10 +309,21 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# galaxies =  19483\n",
+      "# galaxies =  19483\n"
+     ]
+    }
+   ],
    "source": [
     "# Reads MF table, removes duplicate RA and DEC\n",
     "cat2=Table.read('./data/ELAIS-N2_SPIRE_all.fits')\n",
+    "print('# galaxies = ',np.size(cat2['RA']))\n",
+    "print('# galaxies = ',np.size(cat['RA']))\n",
     "del cat2['RA']\n",
     "del cat2['Dec']\n",
     "cat_all = hstack([cat,cat2])"
