--- a/dmu22/dmu22_GAMA-12/XID+BLIND_GAMA-12_final_processing.ipynb
+++ b/dmu22/dmu22_GAMA-12/XID+BLIND_GAMA-12_final_processing.ipynb
@@ -63,38 +63,38 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4563079240\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4509288936\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>HELP_ID</th><th>RA</th><th>Dec</th><th>F_SPIRE_250</th><th>FErr_SPIRE_250_u</th><th>FErr_SPIRE_250_l</th><th>F_SPIRE_350</th><th>FErr_SPIRE_350_u</th><th>FErr_SPIRE_350_l</th><th>F_SPIRE_500</th><th>FErr_SPIRE_500_u</th><th>FErr_SPIRE_500_l</th><th>Bkg_SPIRE_250</th><th>Bkg_SPIRE_350</th><th>Bkg_SPIRE_500</th><th>Sig_conf_SPIRE_250</th><th>Sig_conf_SPIRE_350</th><th>Sig_conf_SPIRE_500</th><th>Rhat_SPIRE_250</th><th>Rhat_SPIRE_350</th><th>Rhat_SPIRE_500</th><th>n_eff_SPIRE_250</th><th>n_eff_SPIRE_500</th><th>n_eff_SPIRE_350</th><th>Pval_res_250</th><th>Pval_res_350</th><th>Pval_res_500</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>5728</td><td>177.332497734</td><td>-2.8626750655</td><td>46.9944</td><td>51.6178</td><td>42.2856</td><td>24.52</td><td>29.1877</td><td>19.781</td><td>7.39592</td><td>12.3455</td><td>2.94018</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>0.998449</td><td>0.999633</td><td>1.00034</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>6193</td><td>177.476888504</td><td>-2.753637517</td><td>51.8878</td><td>55.966</td><td>47.4261</td><td>27.6402</td><td>31.6658</td><td>23.3903</td><td>1.25302</td><td>3.3374</td><td>0.310673</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>1.00216</td><td>0.999647</td><td>0.99841</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>9576</td><td>177.617929987</td><td>-2.75576977652</td><td>50.2238</td><td>53.389</td><td>46.4127</td><td>60.492</td><td>64.153</td><td>56.364</td><td>53.8804</td><td>57.8586</td><td>49.1642</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>0.999809</td><td>1.00037</td><td>0.999019</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>11951</td><td>177.438700314</td><td>-2.79832581251</td><td>35.6137</td><td>40.0015</td><td>31.5634</td><td>26.0749</td><td>30.3597</td><td>21.792</td><td>7.16838</td><td>11.6128</td><td>3.17602</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>0.998457</td><td>0.998844</td><td>1.00312</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>13253</td><td>177.487103895</td><td>-2.77553004482</td><td>41.3769</td><td>45.6643</td><td>37.0655</td><td>18.4139</td><td>22.5013</td><td>14.1669</td><td>6.50032</td><td>11.3097</td><td>2.57637</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>0.998878</td><td>0.998349</td><td>0.998787</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>16636</td><td>177.514185314</td><td>-2.80107711661</td><td>30.8439</td><td>35.3093</td><td>26.0589</td><td>19.4964</td><td>23.7977</td><td>15.1041</td><td>1.90505</td><td>4.61923</td><td>0.559684</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>1.00274</td><td>0.999183</td><td>0.998524</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>18022</td><td>177.499567744</td><td>-2.746520568</td><td>27.8486</td><td>32.4644</td><td>23.3721</td><td>9.11109</td><td>13.1823</td><td>4.73352</td><td>1.97893</td><td>4.28337</td><td>0.590925</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>0.998581</td><td>1.00057</td><td>0.998987</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>18715</td><td>177.583354903</td><td>-2.75759258424</td><td>29.7306</td><td>34.3557</td><td>25.2052</td><td>23.4501</td><td>27.7988</td><td>19.39</td><td>2.21017</td><td>5.07101</td><td>0.601719</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>0.998688</td><td>0.998193</td><td>0.999143</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>25862</td><td>177.59221429</td><td>-2.74489278773</td><td>35.4222</td><td>39.5003</td><td>31.0211</td><td>44.7354</td><td>48.5593</td><td>40.7885</td><td>28.8195</td><td>33.6918</td><td>23.3993</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>1.00012</td><td>0.999501</td><td>0.998736</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>27920</td><td>177.487636553</td><td>-2.80430572097</td><td>13.0023</td><td>17.7782</td><td>8.31032</td><td>2.84512</td><td>5.90067</td><td>0.96972</td><td>1.76676</td><td>3.9922</td><td>0.477517</td><td>-0.00623634</td><td>-0.00736011</td><td>-0.0085574</td><td>0.00181467</td><td>0.00237012</td><td>0.00380198</td><td>0.998348</td><td>1.00029</td><td>1.00127</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>5728</td><td>177.33249773350468</td><td>-2.8626750655047006</td><td>46.99437</td><td>51.617813</td><td>42.285637</td><td>24.519966</td><td>29.18767</td><td>19.781033</td><td>7.3959165</td><td>12.345512</td><td>2.9401817</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>0.9984494</td><td>0.9996332</td><td>1.0003422</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>6193</td><td>177.47688850399337</td><td>-2.753637517003424</td><td>51.88781</td><td>55.96602</td><td>47.426086</td><td>27.64024</td><td>31.665827</td><td>23.390295</td><td>1.2530155</td><td>3.3373992</td><td>0.31067345</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>1.0021628</td><td>0.9996473</td><td>0.99841005</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>9576</td><td>177.61792998658532</td><td>-2.755769776516541</td><td>50.22379</td><td>53.389</td><td>46.41272</td><td>60.492035</td><td>64.15296</td><td>56.363983</td><td>53.880367</td><td>57.85861</td><td>49.16425</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>0.99980855</td><td>1.0003723</td><td>0.9990191</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>11951</td><td>177.43870031367155</td><td>-2.798325812505323</td><td>35.613663</td><td>40.001526</td><td>31.563438</td><td>26.074862</td><td>30.359695</td><td>21.792027</td><td>7.168383</td><td>11.612774</td><td>3.176016</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>0.9984573</td><td>0.9988439</td><td>1.0031193</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>13253</td><td>177.48710389475912</td><td>-2.775530044816809</td><td>41.376884</td><td>45.664272</td><td>37.065506</td><td>18.41389</td><td>22.501331</td><td>14.166896</td><td>6.5003223</td><td>11.309651</td><td>2.5763736</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>0.9988781</td><td>0.9983494</td><td>0.9987865</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>16636</td><td>177.51418531436926</td><td>-2.8010771166096355</td><td>30.843939</td><td>35.30931</td><td>26.058865</td><td>19.496435</td><td>23.797674</td><td>15.104127</td><td>1.905052</td><td>4.6192346</td><td>0.55968374</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>1.0027441</td><td>0.9991835</td><td>0.9985236</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>18022</td><td>177.49956774378163</td><td>-2.746520568003721</td><td>27.84859</td><td>32.46442</td><td>23.372057</td><td>9.111092</td><td>13.182294</td><td>4.733516</td><td>1.9789332</td><td>4.283366</td><td>0.59092546</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>0.9985813</td><td>1.0005714</td><td>0.99898714</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>18715</td><td>177.5833549025818</td><td>-2.7575925842354785</td><td>29.730644</td><td>34.355747</td><td>25.205248</td><td>23.45012</td><td>27.798838</td><td>19.390047</td><td>2.2101705</td><td>5.0710087</td><td>0.601719</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>0.99868774</td><td>0.9981934</td><td>0.9991434</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>25862</td><td>177.59221428983025</td><td>-2.74489278772619</td><td>35.422165</td><td>39.50032</td><td>31.021103</td><td>44.73535</td><td>48.559315</td><td>40.788452</td><td>28.819529</td><td>33.691803</td><td>23.399258</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>1.0001178</td><td>0.99950063</td><td>0.99873555</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>27920</td><td>177.48763655281635</td><td>-2.8043057209669406</td><td>13.002316</td><td>17.77816</td><td>8.310316</td><td>2.8451154</td><td>5.900669</td><td>0.96971977</td><td>1.7667637</td><td>3.9922001</td><td>0.4775168</td><td>-0.0062363395</td><td>-0.007360109</td><td>-0.008557404</td><td>0.0018146746</td><td>0.0023701238</td><td>0.0038019842</td><td>0.9983479</td><td>1.0002941</td><td>1.0012697</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=10>\n",
-       "          HELP_ID                 RA      ... Pval_res_350 Pval_res_500\n",
-       "                                 deg      ...                          \n",
-       "          bytes27              float64    ...   float32      float32   \n",
-       "--------------------------- ------------- ... ------------ ------------\n",
-       "5728                        177.332497734 ...          0.0          0.0\n",
-       "6193                        177.476888504 ...          0.0          0.0\n",
-       "9576                        177.617929987 ...          0.0          0.0\n",
-       "11951                       177.438700314 ...          0.0          0.0\n",
-       "13253                       177.487103895 ...          0.0          0.0\n",
-       "16636                       177.514185314 ...          0.0          0.0\n",
-       "18022                       177.499567744 ...          0.0          0.0\n",
-       "18715                       177.583354903 ...          0.0          0.0\n",
-       "25862                        177.59221429 ...          0.0          0.0\n",
-       "27920                       177.487636553 ...          0.0          0.0"
+       "          HELP_ID                   RA         ... Pval_res_350 Pval_res_500\n",
+       "                                   deg         ...                          \n",
+       "          bytes27                float64       ...   float32      float32   \n",
+       "--------------------------- ------------------ ... ------------ ------------\n",
+       "5728                        177.33249773350468 ...          0.0          0.0\n",
+       "6193                        177.47688850399337 ...          0.0          0.0\n",
+       "9576                        177.61792998658532 ...          0.0          0.0\n",
+       "11951                       177.43870031367155 ...          0.0          0.0\n",
+       "13253                       177.48710389475912 ...          0.0          0.0\n",
+       "16636                       177.51418531436926 ...          0.0          0.0\n",
+       "18022                       177.49956774378163 ...          0.0          0.0\n",
+       "18715                        177.5833549025818 ...          0.0          0.0\n",
+       "25862                       177.59221428983025 ...          0.0          0.0\n",
+       "27920                       177.48763655281635 ...          0.0          0.0"
       ]
      },
      "execution_count": 3,
@@ -122,6 +122,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -161,6 +163,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -200,6 +204,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -305,6 +311,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# galaxies =  112471\n",
+      "# galaxies =  112471\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -317,6 +331,8 @@
    "source": [
     "# Reads MF table, removes duplicate RA and DEC\n",
     "cat2=Table.read('./data/GAMA-12_SPIRE_all.fits')\n",
+    "print('# galaxies = ',np.size(cat2['RA']))\n",
+    "print('# galaxies = ',np.size(cat['RA']))\n",
     "del cat2['RA']\n",
     "del cat2['Dec']\n",
     "cat_all = hstack([cat,cat2])"
