--- a/dmu22/dmu22_HATLAS-NGP/XID+BLIND_HATLAS-NGP_final_processing.ipynb
+++ b/dmu22/dmu22_HATLAS-NGP/XID+BLIND_HATLAS-NGP_final_processing.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,48 +56,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table112043249112\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4423431952\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>HELP_ID</th><th>RA</th><th>Dec</th><th>F_SPIRE_250</th><th>FErr_SPIRE_250_u</th><th>FErr_SPIRE_250_l</th><th>F_SPIRE_350</th><th>FErr_SPIRE_350_u</th><th>FErr_SPIRE_350_l</th><th>F_SPIRE_500</th><th>FErr_SPIRE_500_u</th><th>FErr_SPIRE_500_l</th><th>Bkg_SPIRE_250</th><th>Bkg_SPIRE_350</th><th>Bkg_SPIRE_500</th><th>Sig_conf_SPIRE_250</th><th>Sig_conf_SPIRE_350</th><th>Sig_conf_SPIRE_500</th><th>Rhat_SPIRE_250</th><th>Rhat_SPIRE_350</th><th>Rhat_SPIRE_500</th><th>n_eff_SPIRE_250</th><th>n_eff_SPIRE_500</th><th>n_eff_SPIRE_350</th><th>Pval_res_250</th><th>Pval_res_350</th><th>Pval_res_500</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>5620</td><td>198.678104033</td><td>22.782825747</td><td>75.3391</td><td>81.0035</td><td>68.9752</td><td>39.5567</td><td>45.7898</td><td>33.0493</td><td>28.1484</td><td>35.4917</td><td>21.063</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>1.00073</td><td>0.999762</td><td>0.998182</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>10126</td><td>198.786456889</td><td>22.7956148242</td><td>54.4263</td><td>60.7481</td><td>48.0473</td><td>43.6807</td><td>50.7398</td><td>36.8806</td><td>21.1756</td><td>30.3909</td><td>11.4018</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>0.999533</td><td>1.00102</td><td>0.999801</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>11030</td><td>198.605913984</td><td>22.8398737834</td><td>61.6622</td><td>66.0187</td><td>57.1794</td><td>27.4999</td><td>32.0249</td><td>23.0645</td><td>23.4925</td><td>29.2674</td><td>18.2566</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>0.999103</td><td>1.00022</td><td>0.998727</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>13921</td><td>198.447735502</td><td>22.7864124676</td><td>55.0123</td><td>60.5949</td><td>49.4042</td><td>25.6316</td><td>30.6837</td><td>20.8048</td><td>4.42308</td><td>9.33374</td><td>1.28657</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>1.00007</td><td>0.998423</td><td>0.999529</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>15669</td><td>198.40193447</td><td>22.7621734826</td><td>50.3368</td><td>56.9106</td><td>43.9862</td><td>35.3</td><td>41.1454</td><td>29.2384</td><td>6.91281</td><td>13.8453</td><td>2.26001</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>0.998864</td><td>0.998936</td><td>0.998181</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>16184</td><td>198.717233747</td><td>22.7881907107</td><td>41.7909</td><td>47.9765</td><td>35.4277</td><td>17.2601</td><td>23.73</td><td>11.18</td><td>18.2899</td><td>25.0981</td><td>11.5796</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>0.998973</td><td>0.999165</td><td>0.999656</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>16797</td><td>198.788360622</td><td>22.8105551329</td><td>64.8184</td><td>70.7227</td><td>59.2926</td><td>41.2938</td><td>47.0519</td><td>35.8229</td><td>28.7146</td><td>36.3892</td><td>20.9525</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>0.999212</td><td>0.998782</td><td>0.999179</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>20777</td><td>198.56766656</td><td>22.7702477579</td><td>66.6258</td><td>73.4246</td><td>59.6332</td><td>40.7972</td><td>46.6835</td><td>34.7558</td><td>26.3504</td><td>32.8949</td><td>19.9803</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>1.00188</td><td>0.998595</td><td>0.998687</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>22820</td><td>198.702204817</td><td>22.8405838001</td><td>46.1975</td><td>50.9729</td><td>41.1163</td><td>30.4603</td><td>35.1615</td><td>25.5715</td><td>21.5753</td><td>27.5769</td><td>15.7204</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>0.999446</td><td>0.998972</td><td>0.999713</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>24339</td><td>198.689480788</td><td>22.7739179754</td><td>31.0323</td><td>44.4949</td><td>15.0076</td><td>33.453</td><td>48.4301</td><td>16.295</td><td>14.0996</td><td>27.1257</td><td>3.97232</td><td>-0.46323</td><td>-0.853918</td><td>-0.894239</td><td>0.0263528</td><td>0.0572827</td><td>0.0815704</td><td>0.999971</td><td>0.999587</td><td>0.99905</td><td>1798.0</td><td>2000.0</td><td>1735.0</td><td>0.005</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>5620</td><td>198.67810403277073</td><td>22.782825747021217</td><td>75.33906</td><td>81.00346</td><td>68.97522</td><td>39.556675</td><td>45.78977</td><td>33.04933</td><td>28.148378</td><td>35.49167</td><td>21.063042</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>1.0007315</td><td>0.99976194</td><td>0.9981818</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>10126</td><td>198.78645688873345</td><td>22.795614824151485</td><td>54.42634</td><td>60.748096</td><td>48.047337</td><td>43.680668</td><td>50.739826</td><td>36.880558</td><td>21.175581</td><td>30.390871</td><td>11.401822</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>0.9995334</td><td>1.001019</td><td>0.999801</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>11030</td><td>198.60591398412348</td><td>22.839873783401888</td><td>61.662197</td><td>66.01873</td><td>57.179432</td><td>27.499857</td><td>32.024944</td><td>23.064465</td><td>23.492508</td><td>29.267403</td><td>18.256636</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>0.9991033</td><td>1.0002187</td><td>0.9987274</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>13921</td><td>198.44773550238446</td><td>22.78641246761983</td><td>55.012283</td><td>60.59494</td><td>49.40419</td><td>25.63158</td><td>30.68366</td><td>20.804756</td><td>4.423079</td><td>9.333742</td><td>1.2865666</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>1.0000682</td><td>0.9984229</td><td>0.99952877</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>15669</td><td>198.40193447011904</td><td>22.76217348263982</td><td>50.336792</td><td>56.91064</td><td>43.986225</td><td>35.300045</td><td>41.145355</td><td>29.23841</td><td>6.912807</td><td>13.845295</td><td>2.2600143</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>0.998864</td><td>0.9989364</td><td>0.99818075</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>16184</td><td>198.71723374736786</td><td>22.788190710682134</td><td>41.7909</td><td>47.97651</td><td>35.42771</td><td>17.260077</td><td>23.729965</td><td>11.180018</td><td>18.289879</td><td>25.09809</td><td>11.579571</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>0.9989734</td><td>0.9991646</td><td>0.99965584</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>16797</td><td>198.7883606221909</td><td>22.810555132868856</td><td>64.81837</td><td>70.72275</td><td>59.292595</td><td>41.29376</td><td>47.051853</td><td>35.82295</td><td>28.714626</td><td>36.389214</td><td>20.952528</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>0.9992116</td><td>0.9987821</td><td>0.99917877</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>20777</td><td>198.56766655970537</td><td>22.77024775790825</td><td>66.62577</td><td>73.42457</td><td>59.633186</td><td>40.797215</td><td>46.68347</td><td>34.75578</td><td>26.350426</td><td>32.89486</td><td>19.980335</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>1.0018829</td><td>0.99859524</td><td>0.9986872</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>22820</td><td>198.70220481683936</td><td>22.840583800064806</td><td>46.197536</td><td>50.97291</td><td>41.116272</td><td>30.46033</td><td>35.161453</td><td>25.57153</td><td>21.57527</td><td>27.576866</td><td>15.720423</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>0.99944633</td><td>0.99897194</td><td>0.99971336</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>24339</td><td>198.68948078757478</td><td>22.773917975366206</td><td>31.032272</td><td>44.4949</td><td>15.007576</td><td>33.452995</td><td>48.430088</td><td>16.294952</td><td>14.099572</td><td>27.125715</td><td>3.9723184</td><td>-0.46322954</td><td>-0.853918</td><td>-0.8942393</td><td>0.026352758</td><td>0.05728266</td><td>0.08157045</td><td>0.99997103</td><td>0.99958706</td><td>0.9990499</td><td>1798.0</td><td>2000.0</td><td>1735.0</td><td>0.005</td><td>0.0</td><td>0.0</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=10>\n",
-       "          HELP_ID                 RA      ... Pval_res_350 Pval_res_500\n",
-       "                                 deg      ...                          \n",
-       "          bytes27              float64    ...   float32      float32   \n",
-       "--------------------------- ------------- ... ------------ ------------\n",
-       "5620                        198.678104033 ...          0.0          0.0\n",
-       "10126                       198.786456889 ...          0.0          0.0\n",
-       "11030                       198.605913984 ...          0.0          0.0\n",
-       "13921                       198.447735502 ...          0.0          0.0\n",
-       "15669                        198.40193447 ...          0.0          0.0\n",
-       "16184                       198.717233747 ...          0.0          0.0\n",
-       "16797                       198.788360622 ...          0.0          0.0\n",
-       "20777                        198.56766656 ...          0.0          0.0\n",
-       "22820                       198.702204817 ...          0.0          0.0\n",
-       "24339                       198.689480788 ...          0.0          0.0"
+       "          HELP_ID                   RA         ... Pval_res_350 Pval_res_500\n",
+       "                                   deg         ...                          \n",
+       "          bytes27                float64       ...   float32      float32   \n",
+       "--------------------------- ------------------ ... ------------ ------------\n",
+       "5620                        198.67810403277073 ...          0.0          0.0\n",
+       "10126                       198.78645688873345 ...          0.0          0.0\n",
+       "11030                       198.60591398412348 ...          0.0          0.0\n",
+       "13921                       198.44773550238446 ...          0.0          0.0\n",
+       "15669                       198.40193447011904 ...          0.0          0.0\n",
+       "16184                       198.71723374736786 ...          0.0          0.0\n",
+       "16797                        198.7883606221909 ...          0.0          0.0\n",
+       "20777                       198.56766655970537 ...          0.0          0.0\n",
+       "22820                       198.70220481683936 ...          0.0          0.0\n",
+       "24339                       198.68948078757478 ...          0.0          0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,13 +115,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -154,13 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -193,13 +197,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -239,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,9 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# galaxies =  344635\n",
+      "# galaxies =  344635\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -317,6 +331,8 @@
    "source": [
     "# Reads MF table, removes duplicate RA and DEC\n",
     "cat2=Table.read('./data/HATLAS-NGP_SPIRE_all.fits')\n",
+    "print('# galaxies = ',np.size(cat2['RA']))\n",
+    "print('# galaxies = ',np.size(cat['RA']))\n",
     "del cat2['RA']\n",
     "del cat2['Dec']\n",
     "cat_all = hstack([cat,cat2])"
