--- a/dmu22/dmu22_HATLAS-SGP/XID+BLIND_HATLAS-SGP_final_processing.ipynb
+++ b/dmu22/dmu22_HATLAS-SGP/XID+BLIND_HATLAS-SGP_final_processing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,48 +56,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table112055249944\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4576917992\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>HELP_ID</th><th>RA</th><th>Dec</th><th>F_SPIRE_250</th><th>FErr_SPIRE_250_u</th><th>FErr_SPIRE_250_l</th><th>F_SPIRE_350</th><th>FErr_SPIRE_350_u</th><th>FErr_SPIRE_350_l</th><th>F_SPIRE_500</th><th>FErr_SPIRE_500_u</th><th>FErr_SPIRE_500_l</th><th>Bkg_SPIRE_250</th><th>Bkg_SPIRE_350</th><th>Bkg_SPIRE_500</th><th>Sig_conf_SPIRE_250</th><th>Sig_conf_SPIRE_350</th><th>Sig_conf_SPIRE_500</th><th>Rhat_SPIRE_250</th><th>Rhat_SPIRE_350</th><th>Rhat_SPIRE_500</th><th>n_eff_SPIRE_250</th><th>n_eff_SPIRE_500</th><th>n_eff_SPIRE_350</th><th>Pval_res_250</th><th>Pval_res_350</th><th>Pval_res_500</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>1891</td><td>5.57681825769</td><td>-35.7441504675</td><td>138.995</td><td>139.936</td><td>137.185</td><td>63.4014</td><td>67.3533</td><td>59.7189</td><td>27.3323</td><td>31.8057</td><td>22.6784</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>0.998878</td><td>0.999071</td><td>0.99863</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>5010</td><td>5.65617070009</td><td>-35.7964353783</td><td>98.6757</td><td>101.878</td><td>94.2964</td><td>30.5289</td><td>35.2763</td><td>26.0509</td><td>11.8323</td><td>17.564</td><td>6.37286</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>1.00079</td><td>0.998515</td><td>0.999079</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>36078</td><td>5.59687090929</td><td>-35.8546552805</td><td>65.4694</td><td>70.8393</td><td>59.2599</td><td>59.9732</td><td>65.2857</td><td>54.5865</td><td>23.2317</td><td>30.1892</td><td>16.3226</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>0.998525</td><td>1.00002</td><td>0.998687</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>43714</td><td>5.63406591544</td><td>-35.7856888804</td><td>36.6725</td><td>43.5387</td><td>29.7725</td><td>13.7166</td><td>21.8087</td><td>6.52608</td><td>4.83401</td><td>9.9996</td><td>1.45354</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>1.00045</td><td>0.999022</td><td>0.998435</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>45128</td><td>5.77074579178</td><td>-35.8744089895</td><td>59.1137</td><td>64.8231</td><td>52.699</td><td>57.4439</td><td>63.5992</td><td>51.1797</td><td>20.479</td><td>27.1778</td><td>13.6184</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>0.999655</td><td>0.99832</td><td>0.999911</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.001</td></tr>\n",
-       "<tr><td>45558</td><td>5.56120577313</td><td>-35.8839777247</td><td>45.2513</td><td>52.5546</td><td>37.5736</td><td>29.5604</td><td>36.0632</td><td>23.5861</td><td>6.70344</td><td>12.9331</td><td>2.13333</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>0.998836</td><td>0.999189</td><td>0.99881</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>56070</td><td>5.6535615315</td><td>-35.8662724283</td><td>41.3284</td><td>48.1719</td><td>34.5006</td><td>10.225</td><td>16.0573</td><td>4.90973</td><td>4.73762</td><td>10.3019</td><td>1.39674</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>0.998327</td><td>0.999503</td><td>0.999398</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>63098</td><td>5.7560710641</td><td>-35.8760295993</td><td>34.5955</td><td>41.5201</td><td>27.4778</td><td>19.4263</td><td>25.158</td><td>13.1176</td><td>2.6599</td><td>6.13817</td><td>0.759499</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>0.998631</td><td>0.999284</td><td>0.998589</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>66084</td><td>5.50039652676</td><td>-35.8543719697</td><td>34.1003</td><td>39.5879</td><td>28.7626</td><td>20.1395</td><td>25.9017</td><td>14.2535</td><td>5.54884</td><td>11.0254</td><td>1.60882</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>0.999349</td><td>0.998299</td><td>0.999591</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>79396</td><td>5.56344687814</td><td>-35.8595730661</td><td>45.3397</td><td>51.8517</td><td>38.5223</td><td>44.8499</td><td>51.0571</td><td>38.9056</td><td>20.4436</td><td>27.8069</td><td>13.5844</td><td>-0.245432</td><td>-0.644891</td><td>-0.444529</td><td>0.022885</td><td>0.0411335</td><td>0.0498959</td><td>0.998825</td><td>0.999441</td><td>0.999174</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>1891</td><td>5.576818257685075</td><td>-35.74415046746846</td><td>138.99467</td><td>139.93648</td><td>137.1854</td><td>63.401417</td><td>67.353264</td><td>59.71893</td><td>27.33235</td><td>31.805653</td><td>22.678387</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>0.9988778</td><td>0.9990708</td><td>0.9986296</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>5010</td><td>5.65617070008909</td><td>-35.79643537826804</td><td>98.67573</td><td>101.87761</td><td>94.29637</td><td>30.528902</td><td>35.276302</td><td>26.050928</td><td>11.8323</td><td>17.564028</td><td>6.3728647</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>1.000786</td><td>0.9985152</td><td>0.99907935</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>36078</td><td>5.596870909289559</td><td>-35.85465528048358</td><td>65.46943</td><td>70.83929</td><td>59.259884</td><td>59.973167</td><td>65.285736</td><td>54.58652</td><td>23.231655</td><td>30.189224</td><td>16.322552</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>0.9985248</td><td>1.0000209</td><td>0.9986874</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>43714</td><td>5.6340659154436645</td><td>-35.78568888042521</td><td>36.672512</td><td>43.538677</td><td>29.772467</td><td>13.716563</td><td>21.808691</td><td>6.526084</td><td>4.8340096</td><td>9.999598</td><td>1.4535381</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>1.0004474</td><td>0.99902236</td><td>0.99843544</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>45128</td><td>5.770745791778267</td><td>-35.87440898949359</td><td>59.113728</td><td>64.823135</td><td>52.69897</td><td>57.443935</td><td>63.59924</td><td>51.179714</td><td>20.47898</td><td>27.177761</td><td>13.618407</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>0.9996553</td><td>0.99832034</td><td>0.9999108</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.001</td></tr>\n",
+       "<tr><td>45558</td><td>5.561205773128451</td><td>-35.88397772470273</td><td>45.25131</td><td>52.554592</td><td>37.573586</td><td>29.560389</td><td>36.06319</td><td>23.586058</td><td>6.7034388</td><td>12.93306</td><td>2.133327</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>0.99883604</td><td>0.9991892</td><td>0.99881047</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>56070</td><td>5.653561531501522</td><td>-35.86627242829954</td><td>41.328358</td><td>48.171944</td><td>34.50062</td><td>10.224996</td><td>16.05727</td><td>4.9097347</td><td>4.737621</td><td>10.301936</td><td>1.3967369</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>0.998327</td><td>0.9995033</td><td>0.9993983</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>63098</td><td>5.756071064095612</td><td>-35.87602959932856</td><td>34.595516</td><td>41.520073</td><td>27.47781</td><td>19.426281</td><td>25.157993</td><td>13.117568</td><td>2.6598966</td><td>6.1381717</td><td>0.75949883</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>0.9986314</td><td>0.9992839</td><td>0.9985894</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>66084</td><td>5.500396526761172</td><td>-35.85437196971295</td><td>34.10032</td><td>39.58793</td><td>28.762566</td><td>20.1395</td><td>25.901722</td><td>14.253489</td><td>5.54884</td><td>11.025443</td><td>1.6088195</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>0.99934864</td><td>0.9982985</td><td>0.99959135</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>79396</td><td>5.563446878140639</td><td>-35.85957306611265</td><td>45.33974</td><td>51.851696</td><td>38.522285</td><td>44.84989</td><td>51.057106</td><td>38.90557</td><td>20.44364</td><td>27.806946</td><td>13.58438</td><td>-0.2454322</td><td>-0.64489067</td><td>-0.44452915</td><td>0.02288497</td><td>0.041133497</td><td>0.049895927</td><td>0.9988252</td><td>0.9994408</td><td>0.99917436</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=10>\n",
-       "          HELP_ID                 RA      ... Pval_res_350 Pval_res_500\n",
-       "                                 deg      ...                          \n",
-       "          bytes27              float64    ...   float32      float32   \n",
-       "--------------------------- ------------- ... ------------ ------------\n",
-       "1891                        5.57681825769 ...          0.0          0.0\n",
-       "5010                        5.65617070009 ...          0.0          0.0\n",
-       "36078                       5.59687090929 ...          0.0          0.0\n",
-       "43714                       5.63406591544 ...          0.0          0.0\n",
-       "45128                       5.77074579178 ...          0.0        0.001\n",
-       "45558                       5.56120577313 ...          0.0          0.0\n",
-       "56070                        5.6535615315 ...          0.0          0.0\n",
-       "63098                        5.7560710641 ...          0.0          0.0\n",
-       "66084                       5.50039652676 ...          0.0          0.0\n",
-       "79396                       5.56344687814 ...          0.0          0.0"
+       "          HELP_ID                   RA         ... Pval_res_350 Pval_res_500\n",
+       "                                   deg         ...                          \n",
+       "          bytes27                float64       ...   float32      float32   \n",
+       "--------------------------- ------------------ ... ------------ ------------\n",
+       "1891                         5.576818257685075 ...          0.0          0.0\n",
+       "5010                          5.65617070008909 ...          0.0          0.0\n",
+       "36078                        5.596870909289559 ...          0.0          0.0\n",
+       "43714                       5.6340659154436645 ...          0.0          0.0\n",
+       "45128                        5.770745791778267 ...          0.0        0.001\n",
+       "45558                        5.561205773128451 ...          0.0          0.0\n",
+       "56070                        5.653561531501522 ...          0.0          0.0\n",
+       "63098                        5.756071064095612 ...          0.0          0.0\n",
+       "66084                        5.500396526761172 ...          0.0          0.0\n",
+       "79396                        5.563446878140639 ...          0.0          0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,13 +115,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -154,13 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -193,13 +197,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -239,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,9 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# galaxies =  497501\n",
+      "# galaxies =  497501\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -317,6 +331,8 @@
    "source": [
     "# Reads MF table, removes duplicate RA and DEC\n",
     "cat2=Table.read('./data/HATLAS-SGP_SPIRE_all.fits')\n",
+    "print('# galaxies = ',np.size(cat2['RA']))\n",
+    "print('# galaxies = ',np.size(cat['RA']))\n",
     "del cat2['RA']\n",
     "del cat2['Dec']\n",
     "cat_all = hstack([cat,cat2])"
