--- a/dmu22/dmu22_HDF-N/XID+BLIND_HDF-N_final_processing.ipynb
+++ b/dmu22/dmu22_HDF-N/XID+BLIND_HDF-N_final_processing.ipynb
@@ -63,38 +63,38 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4348004840\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4376590432\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>HELP_ID</th><th>RA</th><th>Dec</th><th>F_SPIRE_250</th><th>FErr_SPIRE_250_u</th><th>FErr_SPIRE_250_l</th><th>F_SPIRE_350</th><th>FErr_SPIRE_350_u</th><th>FErr_SPIRE_350_l</th><th>F_SPIRE_500</th><th>FErr_SPIRE_500_u</th><th>FErr_SPIRE_500_l</th><th>Bkg_SPIRE_250</th><th>Bkg_SPIRE_350</th><th>Bkg_SPIRE_500</th><th>Sig_conf_SPIRE_250</th><th>Sig_conf_SPIRE_350</th><th>Sig_conf_SPIRE_500</th><th>Rhat_SPIRE_250</th><th>Rhat_SPIRE_350</th><th>Rhat_SPIRE_500</th><th>n_eff_SPIRE_250</th><th>n_eff_SPIRE_500</th><th>n_eff_SPIRE_350</th><th>Pval_res_250</th><th>Pval_res_350</th><th>Pval_res_500</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>75</td><td>189.472070513</td><td>61.8357806274</td><td>34.7113</td><td>36.2317</td><td>33.1904</td><td>19.3867</td><td>21.1872</td><td>17.5105</td><td>3.33285</td><td>5.16532</td><td>1.47031</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>0.999052</td><td>0.998902</td><td>1.00127</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
-       "<tr><td>112</td><td>189.523862926</td><td>61.8362330038</td><td>25.4035</td><td>26.9875</td><td>23.7387</td><td>21.1468</td><td>23.2467</td><td>19.1772</td><td>9.8263</td><td>11.9104</td><td>7.78621</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>0.998999</td><td>0.998375</td><td>0.998579</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
-       "<tr><td>162</td><td>189.48615134</td><td>61.8307547309</td><td>43.6347</td><td>45.2324</td><td>41.9485</td><td>22.3837</td><td>24.3975</td><td>20.3647</td><td>8.66891</td><td>11.0693</td><td>6.24951</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>0.99904</td><td>0.998387</td><td>0.998733</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>0.999</td><td>0.998</td></tr>\n",
-       "<tr><td>239</td><td>189.563808221</td><td>61.8825274547</td><td>27.4486</td><td>28.943</td><td>25.9948</td><td>12.0933</td><td>13.9313</td><td>10.1474</td><td>0.493398</td><td>1.20233</td><td>0.136142</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>0.999261</td><td>0.998451</td><td>0.99848</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
-       "<tr><td>270</td><td>189.487265858</td><td>61.8235307086</td><td>9.78145</td><td>11.2972</td><td>8.30311</td><td>0.79482</td><td>1.82713</td><td>0.219423</td><td>0.442497</td><td>1.18768</td><td>0.11953</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>0.999037</td><td>0.99965</td><td>0.998562</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
-       "<tr><td>311</td><td>189.500771246</td><td>61.8857240256</td><td>26.2895</td><td>27.8167</td><td>24.7325</td><td>22.2749</td><td>24.0994</td><td>20.3487</td><td>17.3615</td><td>19.5418</td><td>15.0929</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>0.999016</td><td>0.998625</td><td>0.999257</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
-       "<tr><td>335</td><td>189.513744462</td><td>61.8862528808</td><td>38.0436</td><td>39.5323</td><td>36.5085</td><td>28.5953</td><td>30.5208</td><td>26.6553</td><td>12.1351</td><td>14.2642</td><td>9.90819</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>1.00003</td><td>0.99999</td><td>0.999336</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
-       "<tr><td>348</td><td>189.480640958</td><td>61.8752078088</td><td>24.7213</td><td>26.572</td><td>22.9834</td><td>23.5269</td><td>26.0547</td><td>21.0801</td><td>10.5781</td><td>13.4972</td><td>7.36152</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>0.999371</td><td>1.00074</td><td>0.998553</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.999</td><td>1.0</td><td>1.0</td></tr>\n",
-       "<tr><td>356</td><td>189.491497975</td><td>61.8365775141</td><td>14.5184</td><td>16.2361</td><td>12.8663</td><td>11.2954</td><td>13.3949</td><td>9.35468</td><td>8.65689</td><td>10.9603</td><td>6.47291</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>0.998264</td><td>0.998498</td><td>0.999385</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.998</td><td>1.0</td><td>0.971</td></tr>\n",
-       "<tr><td>868</td><td>189.463315009</td><td>61.8449624107</td><td>7.85882</td><td>9.55664</td><td>6.31814</td><td>0.744762</td><td>1.67263</td><td>0.222085</td><td>0.240797</td><td>0.580659</td><td>0.0735558</td><td>-0.978891</td><td>-1.28564</td><td>-1.61674</td><td>3.09168</td><td>3.76588</td><td>3.50727</td><td>0.999626</td><td>0.999102</td><td>0.999391</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
+       "<tr><td>75</td><td>189.47207051330057</td><td>61.83578062744778</td><td>34.711334</td><td>36.23167</td><td>33.190384</td><td>19.386705</td><td>21.187244</td><td>17.51052</td><td>3.3328526</td><td>5.1653214</td><td>1.470307</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>0.99905246</td><td>0.9989022</td><td>1.0012667</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
+       "<tr><td>112</td><td>189.5238629258716</td><td>61.836233003789474</td><td>25.403498</td><td>26.987457</td><td>23.738743</td><td>21.146824</td><td>23.24672</td><td>19.17715</td><td>9.826296</td><td>11.910365</td><td>7.7862062</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>0.9989988</td><td>0.99837524</td><td>0.99857944</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
+       "<tr><td>162</td><td>189.48615133968767</td><td>61.83075473094658</td><td>43.63474</td><td>45.232418</td><td>41.948498</td><td>22.383675</td><td>24.397493</td><td>20.364653</td><td>8.66891</td><td>11.0693035</td><td>6.2495065</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>0.9990405</td><td>0.9983873</td><td>0.9987331</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>0.999</td><td>0.998</td></tr>\n",
+       "<tr><td>239</td><td>189.56380822099334</td><td>61.882527454707855</td><td>27.448551</td><td>28.943016</td><td>25.994795</td><td>12.093296</td><td>13.931255</td><td>10.147441</td><td>0.49339843</td><td>1.2023259</td><td>0.13614236</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>0.999261</td><td>0.9984511</td><td>0.9984796</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
+       "<tr><td>270</td><td>189.48726585833506</td><td>61.82353070859996</td><td>9.781449</td><td>11.297208</td><td>8.303107</td><td>0.79481995</td><td>1.827133</td><td>0.21942252</td><td>0.44249716</td><td>1.1876771</td><td>0.11953026</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>0.99903667</td><td>0.99965024</td><td>0.9985619</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
+       "<tr><td>311</td><td>189.50077124630025</td><td>61.88572402559173</td><td>26.289492</td><td>27.816673</td><td>24.73249</td><td>22.274868</td><td>24.099386</td><td>20.348732</td><td>17.361462</td><td>19.541756</td><td>15.092925</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>0.99901617</td><td>0.9986254</td><td>0.9992568</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
+       "<tr><td>335</td><td>189.5137444621643</td><td>61.88625288078024</td><td>38.04361</td><td>39.532288</td><td>36.50855</td><td>28.59526</td><td>30.520775</td><td>26.655268</td><td>12.135117</td><td>14.264226</td><td>9.908193</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>1.0000267</td><td>0.9999896</td><td>0.9993363</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
+       "<tr><td>348</td><td>189.4806409579133</td><td>61.87520780875087</td><td>24.721268</td><td>26.571983</td><td>22.983389</td><td>23.526894</td><td>26.054724</td><td>21.080145</td><td>10.578096</td><td>13.497189</td><td>7.3615203</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>0.99937123</td><td>1.0007389</td><td>0.9985527</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.999</td><td>1.0</td><td>1.0</td></tr>\n",
+       "<tr><td>356</td><td>189.49149797544604</td><td>61.836577514074236</td><td>14.518369</td><td>16.236134</td><td>12.866267</td><td>11.295403</td><td>13.394885</td><td>9.354682</td><td>8.656886</td><td>10.960348</td><td>6.47291</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>0.9982637</td><td>0.99849766</td><td>0.9993845</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.998</td><td>1.0</td><td>0.971</td></tr>\n",
+       "<tr><td>868</td><td>189.46331500943853</td><td>61.8449624106938</td><td>7.858822</td><td>9.55664</td><td>6.318145</td><td>0.74476194</td><td>1.6726309</td><td>0.22208466</td><td>0.24079666</td><td>0.5806592</td><td>0.07355579</td><td>-0.97889066</td><td>-1.285639</td><td>-1.6167406</td><td>3.091677</td><td>3.7658827</td><td>3.5072732</td><td>0.99962616</td><td>0.9991022</td><td>0.99939114</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>1.0</td><td>1.0</td><td>1.0</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=10>\n",
-       "          HELP_ID                 RA      ... Pval_res_350 Pval_res_500\n",
-       "                                 deg      ...                          \n",
-       "          bytes27              float64    ...   float32      float32   \n",
-       "--------------------------- ------------- ... ------------ ------------\n",
-       "75                          189.472070513 ...          1.0          1.0\n",
-       "112                         189.523862926 ...          1.0          1.0\n",
-       "162                          189.48615134 ...        0.999        0.998\n",
-       "239                         189.563808221 ...          1.0          1.0\n",
-       "270                         189.487265858 ...          1.0          1.0\n",
-       "311                         189.500771246 ...          1.0          1.0\n",
-       "335                         189.513744462 ...          1.0          1.0\n",
-       "348                         189.480640958 ...          1.0          1.0\n",
-       "356                         189.491497975 ...          1.0        0.971\n",
-       "868                         189.463315009 ...          1.0          1.0"
+       "          HELP_ID                   RA         ... Pval_res_350 Pval_res_500\n",
+       "                                   deg         ...                          \n",
+       "          bytes27                float64       ...   float32      float32   \n",
+       "--------------------------- ------------------ ... ------------ ------------\n",
+       "75                          189.47207051330057 ...          1.0          1.0\n",
+       "112                          189.5238629258716 ...          1.0          1.0\n",
+       "162                         189.48615133968767 ...        0.999        0.998\n",
+       "239                         189.56380822099334 ...          1.0          1.0\n",
+       "270                         189.48726585833506 ...          1.0          1.0\n",
+       "311                         189.50077124630025 ...          1.0          1.0\n",
+       "335                          189.5137444621643 ...          1.0          1.0\n",
+       "348                          189.4806409579133 ...          1.0          1.0\n",
+       "356                         189.49149797544604 ...          1.0        0.971\n",
+       "868                         189.46331500943853 ...          1.0          1.0"
       ]
      },
      "execution_count": 3,
@@ -122,6 +122,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -161,6 +163,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -200,6 +204,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -303,10 +309,21 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# galaxies =  1483\n",
+      "# galaxies =  1483\n"
+     ]
+    }
+   ],
    "source": [
     "# Reads MF table, removes duplicate RA and DEC\n",
     "cat2=Table.read('./data/HDF-N_SPIRE_all.fits')\n",
+    "print('# galaxies = ',np.size(cat2['RA']))\n",
+    "print('# galaxies = ',np.size(cat['RA']))\n",
     "del cat2['RA']\n",
     "del cat2['Dec']\n",
     "cat_all = hstack([cat,cat2])"
