--- a/dmu22/dmu22_red_source/red_validation.ipynb
+++ b/dmu22/dmu22_red_source/red_validation.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +187,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: MergeConflictWarning: Cannot merge meta key 'EXTNAME' types <class 'str'> and <class 'str'>, choosing EXTNAME='Tile_36541_7_SPIRE_cat.fits' [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-07-06T10:24:00' [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'STILVERS' types <class 'str'> and <class 'str'>, choosing STILVERS='3.1-' [astropy.utils.metadata]\n"
+      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-09-21T13:49:29' [astropy.utils.metadata]\n"
      ]
     },
     {
@@ -203,7 +202,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: MergeConflictWarning: Cannot merge meta key 'EXTNAME' types <class 'str'> and <class 'str'>, choosing EXTNAME='Tile_143695_7_SPIRE_cat.fits' [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-07-06T10:26:31' [astropy.utils.metadata]\n"
+      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-09-21T13:51:18' [astropy.utils.metadata]\n"
      ]
     },
     {
@@ -218,7 +217,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: MergeConflictWarning: Cannot merge meta key 'EXTNAME' types <class 'str'> and <class 'str'>, choosing EXTNAME='Tile_108980_7_SPIRE_cat.fits' [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-07-06T10:27:32' [astropy.utils.metadata]\n"
+      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-09-21T13:52:24' [astropy.utils.metadata]\n"
      ]
     },
     {
@@ -308,7 +307,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: MergeConflictWarning: Cannot merge meta key 'EXTNAME' types <class 'str'> and <class 'str'>, choosing EXTNAME='Tile_24174_7_SPIRE_cat.fits' [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-07-06T10:51:57' [astropy.utils.metadata]\n"
+      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-09-21T13:56:11' [astropy.utils.metadata]\n"
      ]
     },
     {
@@ -375,23 +374,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jy XMM-LSS\n"
+      "mJy XMM-LSS\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: MergeConflictWarning: In merged column 'F_BLIND_MF_SPIRE_250' the 'unit' attribute does not match (mJy != Jy).  Using Jy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'FErr_BLIND_MF_SPIRE_250' the 'unit' attribute does not match (mJy != Jy).  Using Jy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'F_BLIND_MF_SPIRE_350' the 'unit' attribute does not match (mJy != Jy).  Using Jy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'FErr_BLIND_MF_SPIRE_350' the 'unit' attribute does not match (mJy != Jy).  Using Jy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'F_BLIND_MF_SPIRE_500' the 'unit' attribute does not match (mJy != Jy).  Using Jy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'FErr_BLIND_MF_SPIRE_500' the 'unit' attribute does not match (mJy != Jy).  Using Jy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'F_BLIND_pix_SPIRE' the 'unit' attribute does not match (mJy != Jy).  Using Jy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'FErr_BLIND_pix_SPIRE' the 'unit' attribute does not match (mJy != Jy).  Using Jy for merged output [astropy.utils.metadata]\n",
       "WARNING: MergeConflictWarning: Cannot merge meta key 'EXTNAME' types <class 'str'> and <class 'str'>, choosing EXTNAME='Tile_147178_7_SPIRE_cat.fits' [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-06-29T09:18:42' [astropy.utils.metadata]\n"
+      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-09-21T13:59:13' [astropy.utils.metadata]\n"
      ]
     },
     {
@@ -405,16 +396,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: MergeConflictWarning: In merged column 'F_BLIND_MF_SPIRE_250' the 'unit' attribute does not match (Jy != mJy).  Using mJy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'FErr_BLIND_MF_SPIRE_250' the 'unit' attribute does not match (Jy != mJy).  Using mJy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'F_BLIND_MF_SPIRE_350' the 'unit' attribute does not match (Jy != mJy).  Using mJy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'FErr_BLIND_MF_SPIRE_350' the 'unit' attribute does not match (Jy != mJy).  Using mJy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'F_BLIND_MF_SPIRE_500' the 'unit' attribute does not match (Jy != mJy).  Using mJy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'FErr_BLIND_MF_SPIRE_500' the 'unit' attribute does not match (Jy != mJy).  Using mJy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'F_BLIND_pix_SPIRE' the 'unit' attribute does not match (Jy != mJy).  Using mJy for merged output [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: In merged column 'FErr_BLIND_pix_SPIRE' the 'unit' attribute does not match (Jy != mJy).  Using mJy for merged output [astropy.utils.metadata]\n",
       "WARNING: MergeConflictWarning: Cannot merge meta key 'EXTNAME' types <class 'str'> and <class 'str'>, choosing EXTNAME='Tile_40949_7_SPIRE_cat.fits' [astropy.utils.metadata]\n",
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-07-06T10:29:08' [astropy.utils.metadata]\n"
+      "WARNING: MergeConflictWarning: Cannot merge meta key 'DATE-HDU' types <class 'str'> and <class 'str'>, choosing DATE-HDU='2018-09-21T13:46:25' [astropy.utils.metadata]\n"
      ]
     }
    ],
@@ -431,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -440,16 +423,6 @@
      "text": [
       "Number of 500um risers with S500 > 52 mJy:  2728\n",
       "Number of 500um risers with S500 > 52 mJy:  1453\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
-      "  return getattr(self.data, op)(other)\n",
-      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in greater\n",
-      "  return getattr(self.data, op)(other)\n"
      ]
     }
    ],
