--- a/dmu22/dmu22_SSDF/XID+BLIND_SSDF_final_processing.ipynb
+++ b/dmu22/dmu22_SSDF/XID+BLIND_SSDF_final_processing.ipynb
@@ -63,38 +63,38 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4353331496\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4541647168\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>HELP_ID</th><th>RA</th><th>Dec</th><th>F_SPIRE_250</th><th>FErr_SPIRE_250_u</th><th>FErr_SPIRE_250_l</th><th>F_SPIRE_350</th><th>FErr_SPIRE_350_u</th><th>FErr_SPIRE_350_l</th><th>F_SPIRE_500</th><th>FErr_SPIRE_500_u</th><th>FErr_SPIRE_500_l</th><th>Bkg_SPIRE_250</th><th>Bkg_SPIRE_350</th><th>Bkg_SPIRE_500</th><th>Sig_conf_SPIRE_250</th><th>Sig_conf_SPIRE_350</th><th>Sig_conf_SPIRE_500</th><th>Rhat_SPIRE_250</th><th>Rhat_SPIRE_350</th><th>Rhat_SPIRE_500</th><th>n_eff_SPIRE_250</th><th>n_eff_SPIRE_500</th><th>n_eff_SPIRE_350</th><th>Pval_res_250</th><th>Pval_res_350</th><th>Pval_res_500</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>29272</td><td>-358.690604143</td><td>-60.7789257799</td><td>1.93114</td><td>4.27637</td><td>0.55752</td><td>3.45296</td><td>8.13013</td><td>0.887598</td><td>1.17848</td><td>2.93027</td><td>0.292935</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>0.999194</td><td>0.999008</td><td>0.99884</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.005</td><td>0.0</td><td>0.006</td></tr>\n",
-       "<tr><td>29392</td><td>-358.71098614</td><td>-60.7831338451</td><td>6.89595</td><td>10.6489</td><td>3.72965</td><td>1.5519</td><td>3.37323</td><td>0.461027</td><td>0.453434</td><td>0.97065</td><td>0.136722</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>1.00467</td><td>0.999978</td><td>1.00082</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>45878</td><td>-358.676824882</td><td>-60.7693759277</td><td>1.66543</td><td>3.24288</td><td>0.538552</td><td>0.569171</td><td>1.14341</td><td>0.168724</td><td>0.545055</td><td>1.21338</td><td>0.162321</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>1.00066</td><td>1.00118</td><td>0.998978</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>49735</td><td>-358.678389924</td><td>-60.7556598664</td><td>13.7341</td><td>23.979</td><td>4.75297</td><td>2.06174</td><td>4.22746</td><td>0.650399</td><td>0.41787</td><td>0.888275</td><td>0.12479</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>1.00004</td><td>0.99911</td><td>0.998549</td><td>1586.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>52847</td><td>-358.659263178</td><td>-60.7612142738</td><td>0.860509</td><td>1.6592</td><td>0.265067</td><td>0.493733</td><td>0.969173</td><td>0.146998</td><td>0.58521</td><td>1.3318</td><td>0.140917</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>0.999012</td><td>0.999212</td><td>0.998824</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>76608</td><td>-358.653991374</td><td>-60.745628305</td><td>15.7693</td><td>25.5066</td><td>6.94823</td><td>0.502664</td><td>1.02342</td><td>0.152883</td><td>1.2838</td><td>2.8656</td><td>0.378945</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>0.999453</td><td>0.999081</td><td>0.999365</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>85468</td><td>-358.675863611</td><td>-60.7565866693</td><td>14.8114</td><td>24.6614</td><td>5.44987</td><td>1.00219</td><td>2.32191</td><td>0.261024</td><td>0.321425</td><td>0.734589</td><td>0.0869344</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>1.00095</td><td>1.00087</td><td>0.998795</td><td>1686.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>124962</td><td>-358.632690328</td><td>-60.7548961202</td><td>0.830593</td><td>1.69536</td><td>0.257114</td><td>0.519464</td><td>0.995104</td><td>0.168672</td><td>0.493208</td><td>0.909196</td><td>0.164592</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>1.00115</td><td>1.00081</td><td>0.998933</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>147246</td><td>-358.722980142</td><td>-60.7889584897</td><td>1.39834</td><td>2.80195</td><td>0.420495</td><td>0.808252</td><td>1.65312</td><td>0.223772</td><td>1.34815</td><td>2.84707</td><td>0.437278</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>1.00033</td><td>0.999756</td><td>0.998391</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.572</td><td>0.0</td><td>0.001</td></tr>\n",
-       "<tr><td>164509</td><td>-358.700593392</td><td>-60.7664982945</td><td>16.4789</td><td>22.7507</td><td>10.1882</td><td>22.8759</td><td>28.4312</td><td>17.6509</td><td>1.12218</td><td>2.42552</td><td>0.2953</td><td>-0.0265891</td><td>-0.130644</td><td>-0.250054</td><td>0.0183654</td><td>0.0279238</td><td>0.0384039</td><td>1.00038</td><td>0.998785</td><td>0.999445</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.823</td><td>0.0</td></tr>\n",
+       "<tr><td>29272</td><td>-358.690604142773</td><td>-60.7789257799088</td><td>1.9311442</td><td>4.276367</td><td>0.55752003</td><td>3.4529607</td><td>8.130131</td><td>0.8875977</td><td>1.1784822</td><td>2.9302742</td><td>0.29293534</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>0.99919355</td><td>0.99900794</td><td>0.99884003</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.005</td><td>0.0</td><td>0.006</td></tr>\n",
+       "<tr><td>29392</td><td>-358.71098613970406</td><td>-60.78313384514085</td><td>6.8959517</td><td>10.648925</td><td>3.7296543</td><td>1.5518979</td><td>3.3732264</td><td>0.46102715</td><td>0.45343405</td><td>0.97065026</td><td>0.13672246</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>1.0046676</td><td>0.9999775</td><td>1.0008192</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>45878</td><td>-358.6768248818768</td><td>-60.76937592767701</td><td>1.6654271</td><td>3.242882</td><td>0.5385522</td><td>0.569171</td><td>1.1434054</td><td>0.16872375</td><td>0.5450551</td><td>1.2133816</td><td>0.16232073</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>1.0006626</td><td>1.0011783</td><td>0.99897754</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>49735</td><td>-358.6783899236406</td><td>-60.755659866426676</td><td>13.734138</td><td>23.978998</td><td>4.7529683</td><td>2.061744</td><td>4.2274585</td><td>0.6503994</td><td>0.4178695</td><td>0.8882754</td><td>0.1247902</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>1.0000433</td><td>0.99911</td><td>0.9985493</td><td>1586.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>52847</td><td>-358.65926317805116</td><td>-60.76121427378042</td><td>0.8605088</td><td>1.6592047</td><td>0.26506725</td><td>0.4937332</td><td>0.96917343</td><td>0.14699751</td><td>0.5852099</td><td>1.3318017</td><td>0.14091687</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>0.9990124</td><td>0.99921167</td><td>0.99882424</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>76608</td><td>-358.6539913742425</td><td>-60.74562830500216</td><td>15.7693</td><td>25.506556</td><td>6.9482317</td><td>0.50266427</td><td>1.0234169</td><td>0.15288344</td><td>1.2838043</td><td>2.8656046</td><td>0.37894502</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>0.99945277</td><td>0.99908125</td><td>0.9993646</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>85468</td><td>-358.675863611176</td><td>-60.756586669273844</td><td>14.811441</td><td>24.661407</td><td>5.449873</td><td>1.0021937</td><td>2.3219097</td><td>0.26102442</td><td>0.32142544</td><td>0.7345886</td><td>0.08693438</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>1.0009478</td><td>1.000874</td><td>0.9987951</td><td>1686.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>124962</td><td>-358.6326903281298</td><td>-60.75489612016789</td><td>0.83059317</td><td>1.6953614</td><td>0.257114</td><td>0.5194643</td><td>0.99510443</td><td>0.16867247</td><td>0.49320814</td><td>0.90919644</td><td>0.16459176</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>1.0011467</td><td>1.0008078</td><td>0.9989334</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>147246</td><td>-358.72298014161186</td><td>-60.78895848969828</td><td>1.3983359</td><td>2.8019547</td><td>0.420495</td><td>0.80825204</td><td>1.653118</td><td>0.22377178</td><td>1.3481537</td><td>2.8470695</td><td>0.43727788</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>1.0003278</td><td>0.9997558</td><td>0.99839056</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.572</td><td>0.0</td><td>0.001</td></tr>\n",
+       "<tr><td>164509</td><td>-358.70059339241817</td><td>-60.766498294475284</td><td>16.47891</td><td>22.750696</td><td>10.188234</td><td>22.875937</td><td>28.431227</td><td>17.650877</td><td>1.1221809</td><td>2.4255242</td><td>0.2952997</td><td>-0.026589109</td><td>-0.13064381</td><td>-0.2500538</td><td>0.018365432</td><td>0.027923811</td><td>0.038403932</td><td>1.0003802</td><td>0.99878544</td><td>0.9994449</td><td>2000.0</td><td>2000.0</td><td>2000.0</td><td>0.0</td><td>0.823</td><td>0.0</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=10>\n",
-       "          HELP_ID                 RA       ... Pval_res_350 Pval_res_500\n",
-       "                                 deg       ...                          \n",
-       "          bytes27              float64     ...   float32      float32   \n",
-       "--------------------------- -------------- ... ------------ ------------\n",
-       "29272                       -358.690604143 ...          0.0        0.006\n",
-       "29392                        -358.71098614 ...          0.0          0.0\n",
-       "45878                       -358.676824882 ...          0.0          0.0\n",
-       "49735                       -358.678389924 ...          0.0          0.0\n",
-       "52847                       -358.659263178 ...          0.0          0.0\n",
-       "76608                       -358.653991374 ...          0.0          0.0\n",
-       "85468                       -358.675863611 ...          0.0          0.0\n",
-       "124962                      -358.632690328 ...          0.0          0.0\n",
-       "147246                      -358.722980142 ...          0.0        0.001\n",
-       "164509                      -358.700593392 ...        0.823          0.0"
+       "          HELP_ID                    RA         ... Pval_res_350 Pval_res_500\n",
+       "                                    deg         ...                          \n",
+       "          bytes27                 float64       ...   float32      float32   \n",
+       "--------------------------- ------------------- ... ------------ ------------\n",
+       "29272                         -358.690604142773 ...          0.0        0.006\n",
+       "29392                       -358.71098613970406 ...          0.0          0.0\n",
+       "45878                        -358.6768248818768 ...          0.0          0.0\n",
+       "49735                        -358.6783899236406 ...          0.0          0.0\n",
+       "52847                       -358.65926317805116 ...          0.0          0.0\n",
+       "76608                        -358.6539913742425 ...          0.0          0.0\n",
+       "85468                         -358.675863611176 ...          0.0          0.0\n",
+       "124962                       -358.6326903281298 ...          0.0          0.0\n",
+       "147246                      -358.72298014161186 ...          0.0        0.001\n",
+       "164509                      -358.70059339241817 ...        0.823          0.0"
       ]
      },
      "execution_count": 3,
@@ -122,6 +122,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -161,6 +163,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -200,6 +204,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
       "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "/Users/Steven/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/matplotlib/axes/_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
@@ -305,6 +311,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# galaxies =  196895\n",
+      "# galaxies =  196895\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -317,6 +331,8 @@
    "source": [
     "# Reads MF table, removes duplicate RA and DEC\n",
     "cat2=Table.read('./data/SSDF_SPIRE_all.fits')\n",
+    "print('# galaxies = ',np.size(cat2['RA']))\n",
+    "print('# galaxies = ',np.size(cat['RA']))\n",
     "del cat2['RA']\n",
     "del cat2['Dec']\n",
     "cat_all = hstack([cat,cat2])"
